feat(module): implement full CRUD for module and module group